--- a/Modelo de cajas, display y position/assets/css/style1.css
+++ b/Modelo de cajas, display y position/assets/css/style1.css
@@ -3,10 +3,14 @@ margin : 0 ;
 padding : 0 ;
 }
 .navbar {
-    position: fixed top;
-    border : 2px solid green;
-    background-color: green;
-    height : 120px ;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 1030;
+  border : 2px solid green;
+  background-color: green;
+  height : 120px ;
 }
 
 .box{
