--- a/Modelo de cajas, display y position/assets/css/style3.css
+++ b/Modelo de cajas, display y position/assets/css/style3.css
@@ -51,10 +51,27 @@ body {background-color: white;}
 
 .sq_den2{
 	background-color: red;
+	width: 335px;
+	height: 135px;
+    float: right;
+}
+
+.sq_den3{
+	background-color: red;
 	width: 135px;
 	height: 135px;
-    top: 165px;
     float: left;
+    position : relative;
+    top: 30px;
+}
+
+.sq_den4{
+	background-color: red;
+	width: 335px;
+	height: 135px;
+    float: right;
+    position : relative;
+    top: 30px;
 }
 
 
@@ -63,5 +80,8 @@ body {background-color: white;}
 	width: 135px;
 	height: 135px;
     border-radius:67.5px;
-    float: center;
+    float: left;
+	    position : relative;
+    top: 75px;
+	left: 180px;
     }
